--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Hi, I'm nof0xgvn</h1>
+			<h1>Hi, I'm nof∅xgvn</h1>
 			<a href="#stuff">&#8681;Scroll <span>down</span> for more&#8681;</a>
 		</header>
 		<section id="stuff">
