--- a/Twitch/Bot/commands.html
+++ b/Twitch/Bot/commands.html
@@ -1,1 +1,63 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Chat Commands</title>
+	<link rel="stylesheet" type="text/css" href="commands.css">
+</head>
+<body>
+	<header>
+		<table style="width: 75%;">
+			<tr>
+				<th>Command</th>
+				<th>Message</th>
+			</tr>
+			<tr>
+				<td>!dice [x]</td>
+				<td>roll a x sided dice (default 6)</td>
+			</tr>
+			<tr>
+				<td>!coin</td>
+				<td>toss a coin</td>
+			</tr>
+			<tr>
+				<td>!discord</td>
+				<td>get a link to my Discord server</td>
+			</tr>
+			<tr>
+				<td>!hug [target]</td>
+				<td>give someone a hug... or something. anything.</td>
+			</tr>
+			<tr>
+				<td>!rehug [target]</td>
+				<td>return that hug u got</td>
+			</tr>
+			<tr>
+				<td>!lurk</td>
+				<td>it's a lurk command, come on.</td>
+			</tr>
+			<tr>
+				<td>!unlurk // !re // !back</td>
+				<td>what do you think these do!?</td>
+			</tr>
+			<tr>
+				<td>!pat [target]</td>
+				<td>give headpats. please? :<</td>
+			</tr>
+			<tr>
+				<td>!bonk [target]</td>
+				<td>bonk!</td>
+			</tr>
+			<tr>
+				<td>!youdied</td>
+				<td>advance my death counter by one.</td>
+			</tr>
+			<tr>
+				<td>!deaths</td>
+				<td>display current deaths</td>
+			</tr>
+		</table>
+	</header>
+</body>
+</html>
