--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<section id="stuff">
 			<p>Here's some stuff:</p>
 			<a href="https://github.com/nof0xgvn/nof0xgvn.github.io">This page on GitHub</a> <br>
+			<a href="https://github.com/nof0xgvn/TwitchBotThingy">A Twitch...Bot... Thing that i made...</a> <br>
 			<a href="Twitch/Bot/commands.html">Twitch Bot commands</a>
 		</section>
 	</body>
