--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Hi, I'm nof∅xgvn</h1>
+			<h1>hi, i'm nof∅xgvn</h1>
+			<img src="img/pfp.png">
+			<p>my name is Rei and I'm a useless fØx on the internet. <br/> they/them | anxious as heck | criminal in 66 countries</p>
+
 			<a href="#stuff">&#8681;Scroll <span>down</span> for more&#8681;</a>
 		</header>
 		<section id="stuff">
-			<p>Here's some stuff:</p>
-			<a href="https://github.com/nof0xgvn/nof0xgvn.github.io">This page on GitHub</a> <br>
-			<a href="https://github.com/nof0xgvn/TwitchBotThingy">A Twitch...Bot... Thing that i made...</a> <br>
-			<a href="Twitch/Bot/commands.html">Twitch Bot commands</a>
+
 		</section>
 	</body>
 </html>
