--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 		</title>
 
 		<link rel="stylesheet" type="text/css" href="index.css">
-		<link rel="shortcut icon" type="image/png" href="favicon.png">
+		<link rel="shortcut icon" type="image/png" href="img/slashedzero.png">
 		
 	</head>
 	<body>
 		<header>
 			<h1>hi, i'm nof∅xgvn</h1>
 			<img src="img/pfp.png">
-			<p>my name is Rei and I'm a useless fØx on the internet. <br/> they/them | anxious as heck | criminal in 66 countries</p>
+			<p>my name is Rei and I'm a useless fØx on the internet. <br/> they/them | anxious as heck | criminal in <span id="amount"></span> countries</p>
 
 			<a href="#stuff">&#8681;Scroll <span>down</span> for more&#8681;</a>
 		</header>
-		<section id="stuff">
-
+		<section id="stuff" class="container">
+			<img class="presenting" src="img/presenting.png">
 		</section>
+		<script type="text/javascript" src="./index.js"></script>
 	</body>
 </html>
