--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 		<title>
 			nof∅xgvn
 		</title>
@@ -14,13 +15,12 @@
 		<header>
 			<h1>hi, i'm nof∅xgvn</h1>
 			<img src="img/pfp.png">
-			<p>my name is Rei and I'm a useless fØx on the internet. <br/> they/them | anxious as heck | criminal in <span id="amount"></span> countries</p>
+			<p>my name is Rei and I'm a useless fØx on the internet. <br/> they/them | anxious as heck | criminal in <span id="amount">117</span> countries</p>
 
 			<a href="#stuff">&#8681;Scroll <span>down</span> for more&#8681;</a>
 		</header>
 		<section id="stuff" class="container">
-			<img class="presenting" src="img/presenting.png">
+			<img class="presenting hideslim" src="img/presenting.png">
 		</section>
-		<script type="text/javascript" src="./index.js"></script>
 	</body>
 </html>
