--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<a href="#stuff">&#8681;Scroll <span>down</span> for more&#8681;</a>
 		</header>
 		<section id="stuff" class="container">
-			<img class="presenting hideslim" src="img/presenting.png">
+			<img class="presenting hide" src="img/presenting.png">
 		</section>
 	</body>
 </html>
