--- a/index.html
+++ b/index.html
@@ -15,12 +15,28 @@
 		<header>
 			<h1>hi, i'm nof∅xgvn</h1>
 			<img src="img/pfp.png">
-			<p>my name is Rei and I'm a useless fØx on the internet. <br/> they/them | anxious as heck | criminal in <span id="amount">117</span> countries</p>
+			<p>my name is Rei <span class="hideM">and</span> <br class="showM">I'm a useless fØx on the internet. <br/> they/them | anxious as heck <span class="hideM">|</span> <br class="showM">criminal in <span id="amount">117</span> countries</p>
 
 			<a href="#stuff">&#8681;Scroll <span>down</span> for more&#8681;</a>
 		</header>
 		<section id="stuff" class="container">
-			<img class="presenting hide" src="img/presenting.png">
+			<img class="presenting hideS" src="img/presenting.png">
+
+			<a class="socials discord" href="https://discord.gg/peVRssB29x"><img src="img/socials/discord_white.png"></a>
+			<a class="text" href="https://discord.gg/peVRssB29x">join our community! :3</a>
+
+			<a class="socials twitch" href="https://www.twitch.tv/nof0xgvn"><img src="img/socials/twitch_white.png"></a>
+			<a class="text" href="https://www.twitch.tv/nof0xgvn">the place where <br class="showM">the magic(?) happens??</a>
+
+			<a class="socials youtube" href="https://www.youtube.com/@noarch1vegvn"><img src="img/socials/youtube_white.png"></a>
+			<a class="text" href="https://www.youtube.com/@noarch1vegvn">archive only <br class="showM">(for now?)</a>
+			
+			<a class="socials pronouns" href="https://en.pronouns.page/@nof0xgvn"><img src="img/socials/pronouns-page_white.png"></a>
+			<a class="text" href="https://en.pronouns.page/@nof0xgvn">i have pronouns. <br class="showM">do not refer to me</a>
+			
+			<a class="socials kofi" href="https://ko-fi.com/nofoxgvn"><img src="img/socials/ko-fi_white.png"></a>
+			<a class="text" href="https://ko-fi.com/nofoxgvn">support the fØx uwu</a>
+
 		</section>
 	</body>
 </html>
