--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<a class="text" href="https://www.youtube.com/@noarch1vegvn">archive only <br class="showM">(for now?)</a>
 			
 			<a class="socials pronouns" href="https://en.pronouns.page/@nof0xgvn"><img src="img/socials/pronouns-page_white.png"></a>
-			<a class="text" href="https://en.pronouns.page/@nof0xgvn">i have pronouns. <br class="showM">do not refer to me</a>
+			<a class="text" href="https://en.pronouns.page/@nof0xgvn">i have no pronouns. <br class="showM">do not refer to me</a>
 			
 			<a class="socials kofi" href="https://ko-fi.com/nofoxgvn"><img src="img/socials/ko-fi_white.png"></a>
 			<a class="text" href="https://ko-fi.com/nofoxgvn">support the fØx uwu</a>
