--- a/index.html
+++ b/index.html
@@ -22,21 +22,22 @@
 		<section id="stuff" class="container">
 			<img class="presenting hideS" src="img/presenting.png">
 
-			<a class="socials discord" href="https://discord.gg/peVRssB29x"><img src="img/socials/discord_white.png"></a>
+			<a id="discord" class="socials" href="https://discord.gg/peVRssB29x"><img src="img/socials/discord_white.png"></a>
 			<a class="text" href="https://discord.gg/peVRssB29x">join our community! :3</a>
 
-			<a class="socials twitch" href="https://www.twitch.tv/nof0xgvn"><img src="img/socials/twitch_white.png"></a>
+			<a id="twitch" class="socials" href="https://www.twitch.tv/nof0xgvn"><img src="img/socials/twitch_white.png"></a>
 			<a class="text" href="https://www.twitch.tv/nof0xgvn">the place where <br class="showM">the magic(?) happens??</a>
 
-			<a class="socials youtube" href="https://www.youtube.com/@noarch1vegvn"><img src="img/socials/youtube_white.png"></a>
+			<a id="youtube" class="socials" href="https://www.youtube.com/@noarch1vegvn"><img src="img/socials/youtube_white.png"></a>
 			<a class="text" href="https://www.youtube.com/@noarch1vegvn">archive only <br class="showM">(for now?)</a>
 			
-			<a class="socials pronouns" href="https://en.pronouns.page/@nof0xgvn"><img src="img/socials/pronouns-page_white.png"></a>
+			<a id="pronouns" class="socials" href="https://en.pronouns.page/@nof0xgvn"><img src="img/socials/pronouns-page_white.png"></a>
 			<a class="text" href="https://en.pronouns.page/@nof0xgvn">i have no pronouns. <br class="showM">do not refer to me</a>
 			
-			<a class="socials kofi" href="https://ko-fi.com/nofoxgvn"><img src="img/socials/ko-fi_white.png"></a>
+			<a id="kofi" class="socials" href="https://ko-fi.com/nofoxgvn"><img src="img/socials/ko-fi_white.png"></a>
 			<a class="text" href="https://ko-fi.com/nofoxgvn">support the fØx uwu</a>
 
 		</section>
+		<script type="text/javascript" src="index.js"></script>
 	</body>
 </html>
