--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<a class="text" href="https://en.pronouns.page/@nof0xgvn">i have no pronouns. <br class="showM">do not refer to me</a>
 			
 			<a id="kofi" class="socials" href="https://ko-fi.com/nofoxgvn"><img src="img/socials/ko-fi_white.png"></a>
-			<a class="text" href="https://ko-fi.com/nofoxgvn">support the fØx uwu</a>
+			<a class="text" href="https://ko-fi.com/nof0xgvn">support the fØx uwu</a>
 
 		</section>
 		<script type="text/javascript" src="index.js"></script>
