update ko-fi link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<a id="pronouns" class="socials" href="https://en.pronouns.page/@nof0xgvn"><img src="img/socials/pronouns-page_white.png"></a>
 			<a class="text" href="https://en.pronouns.page/@nof0xgvn">i have no pronouns. <br class="showM">do not refer to me</a>
 			
-			<a id="kofi" class="socials" href="https://ko-fi.com/nofoxgvn"><img src="img/socials/ko-fi_white.png"></a>
+			<a id="kofi" class="socials" href="https://ko-fi.com/nof0xgvn"><img src="img/socials/ko-fi_white.png"></a>
 			<a class="text" href="https://ko-fi.com/nof0xgvn">support the fØx uwu</a>
 
 		</section>
