--- a/index.html
+++ b/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-		<title>
-			nof∅xgvn
-		</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
+    />
+    <title>nof∅xgvn</title>
 
-		<link rel="stylesheet" type="text/css" href="index.css">
-		<link rel="shortcut icon" type="image/png" href="img/slashedzero.png">
-		
-	</head>
-	<body>
-		<header>
-			<h1>hi, i'm nof∅xgvn</h1>
-			<img src="img/pfp.png">
-			<p>my name is Rei <span class="hideM">and</span> <br class="showM">I'm a useless fØx on the internet. <br/> they/them | anxious as heck <span class="hideM">|</span> <br class="showM">criminal in <span id="amount">176</span> countries</p>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="shortcut icon" type="image/png" href="img/slashedzero.png" />
+  </head>
+  <body>
+    <header>
+      <h1>hi, i'm nof∅xgvn</h1>
+      <img src="img/pfp.png" />
+      <p>
+        my name is Rei <span class="hideM">and</span> <br class="showM" />I'm a
+        useless fØx on the internet. <br />
+        they/them | anxious as heck <span class="hideM">|</span>
+        <br class="showM" />criminal in <span id="amount">172</span> countries
+      </p>
 
-			<a href="#stuff">&#8681;Scroll <span>down</span> for more&#8681;</a>
-		</header>
-		<section id="stuff" class="container">
-			<img class="presenting hideS" src="img/presenting.png">
+      <a href="#stuff">&#8681;Scroll <span>down</span> for more&#8681;</a>
+    </header>
+    <section id="stuff" class="container">
+      <img class="presenting hideS" src="img/presenting.png" />
 
-			<a id="discord" class="socials" href="https://discord.gg/peVRssB29x"><img src="img/socials/discord_white.png"></a>
-			<a class="text" href="https://discord.gg/peVRssB29x">join our community! :3</a>
+      <a id="discord" class="socials" href="https://discord.gg/peVRssB29x"
+        ><img src="img/socials/discord_white.png"
+      /></a>
+      <a class="text" href="https://discord.gg/peVRssB29x"
+        >join our community! :3</a
+      >
 
-			<a id="twitch" class="socials" href="https://www.twitch.tv/nof0xgvn"><img src="img/socials/twitch_white.png"></a>
-			<a class="text" href="https://www.twitch.tv/nof0xgvn">the place where <br class="showM">the magic(?) happens??</a>
+      <a id="twitch" class="socials" href="https://www.twitch.tv/nof0xgvn"
+        ><img src="img/socials/twitch_white.png"
+      /></a>
+      <a class="text" href="https://www.twitch.tv/nof0xgvn"
+        >the place where <br class="showM" />the magic(?) happens??</a
+      >
 
-			<a id="youtube" class="socials" href="https://www.youtube.com/@noarch1vegvn"><img src="img/socials/youtube_white.png"></a>
-			<a class="text" href="https://www.youtube.com/@noarch1vegvn">archive only <br class="showM">(for now?)</a>
-			
-			<a id="pronouns" class="socials" href="https://en.pronouns.page/@nof0xgvn"><img src="img/socials/pronouns-page_white.png"></a>
-			<a class="text" href="https://en.pronouns.page/@nof0xgvn">i have no pronouns. <br class="showM">do not refer to me</a>
-			
-			<a id="kofi" class="socials" href="https://ko-fi.com/nof0xgvn"><img src="img/socials/ko-fi_white.png"></a>
-			<a class="text" href="https://ko-fi.com/nof0xgvn">support the fØx uwu</a>
+      <a
+        id="youtube"
+        class="socials"
+        href="https://www.youtube.com/@nof0xgvn"
+        ><img src="img/socials/youtube_white.png"
+      /></a>
+      <a class="text" href="https://www.youtube.com/@nof0xgvn"
+        >archive only <br class="showM" />(for now?)</a
+      >
 
-		</section>
-		<script type="text/javascript" src="index.js"></script>
-	</body>
+      <a id="pronouns" class="socials" href="https://en.pronouns.page/@nof0xgvn"
+        ><img src="img/socials/pronouns-page_white.png"
+      /></a>
+      <a class="text" href="https://en.pronouns.page/@nof0xgvn"
+        >i have no pronouns. <br class="showM" />do not refer to me</a
+      >
+
+      <a id="kofi" class="socials" href="https://ko-fi.com/nof0xgvn"
+        ><img src="img/socials/ko-fi_white.png"
+      /></a>
+      <a class="text" href="https://ko-fi.com/nof0xgvn">support the fØx uwu</a>
+    </section>
+    <script type="text/javascript" src="index.js"></script>
+  </body>
 </html>
