--- a/index.html
+++ b/index.html
@@ -27,41 +27,42 @@
     <section id="stuff" class="container">
       <img class="presenting hideS" src="img/presenting.png" />
 
-      <a id="discord" class="socials" href="https://discord.gg/peVRssB29x"
+      <a id="discord" class="socials" target="_blank" href="https://discord.gg/peVRssB29x"
         ><img src="img/socials/discord_white.png"
       /></a>
-      <a class="text" href="https://discord.gg/peVRssB29x"
+      <a class="text" target="_blank" href="https://discord.gg/peVRssB29x"
         >join our community! :3</a
       >
 
-      <a id="twitch" class="socials" href="https://www.twitch.tv/nof0xgvn"
+      <a id="twitch" class="socials" target="_blank" href="https://www.twitch.tv/nof0xgvn"
         ><img src="img/socials/twitch_white.png"
       /></a>
-      <a class="text" href="https://www.twitch.tv/nof0xgvn"
+      <a class="text" target="_blank" href="https://www.twitch.tv/nof0xgvn"
         >the place where <br class="showM" />the magic(?) happens??</a
       >
 
       <a
         id="youtube"
         class="socials"
+        target="_blank"
         href="https://www.youtube.com/@nof0xgvn"
         ><img src="img/socials/youtube_white.png"
       /></a>
-      <a class="text" href="https://www.youtube.com/@nof0xgvn"
+      <a class="text" target="_blank" href="https://www.youtube.com/@nof0xgvn"
         >archive only <br class="showM" />(for now?)</a
       >
 
-      <a id="pronouns" class="socials" href="https://en.pronouns.page/@nof0xgvn"
+      <a id="pronouns" class="socials" target="_blank" href="https://en.pronouns.page/@nof0xgvn"
         ><img src="img/socials/pronouns-page_white.png"
       /></a>
-      <a class="text" href="https://en.pronouns.page/@nof0xgvn"
+      <a class="text" target="_blank" href="https://en.pronouns.page/@nof0xgvn"
         >i have no pronouns. <br class="showM" />do not refer to me</a
       >
 
-      <a id="kofi" class="socials" href="https://ko-fi.com/nof0xgvn"
+      <a id="kofi" class="socials" target="_blank" href="https://ko-fi.com/nof0xgvn"
         ><img src="img/socials/ko-fi_white.png"
       /></a>
-      <a class="text" href="https://ko-fi.com/nof0xgvn">support the fØx uwu</a>
+      <a class="text" target="_blank" href="https://ko-fi.com/nof0xgvn">support the fØx uwu</a>
     </section>
     <script type="text/javascript" src="index.js"></script>
   </body>
