--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="img/pfp.png" />
       <p>
         my name is Rei <span class="hideM">and</span> <br class="showM" />I'm a
-        useless fØx on the internet. <br />
+        useless f∅x on the internet. <br />
         they/them | anxious as heck <span class="hideM">|</span>
         <br class="showM" />criminal in <span id="amount">173</span> countries
       </p>
